; ModuleID = '/home/carl/AnghaBench/redis/deps/hiredis/extr_hiredis.c_redisAppendCommandArgv.c'
source_filename = "/home/carl/AnghaBench/redis/deps/hiredis/extr_hiredis.c_redisAppendCommandArgv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDIS_ERR_OOM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"Out of memory\00", align 1
@REDIS_ERR = common dso_local global i32 0, align 4
@REDIS_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @redisAppendCommandArgv(i32* %0, i32 %1, i8** %2, i64* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8**, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8** %2, i8*** %8, align 8
  store i64* %3, i64** %9, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i8**, i8*** %8, align 8
  %14 = load i64*, i64** %9, align 8
  %15 = call i32 @redisFormatSdsCommandArgv(i32* %10, i32 %12, i8** %13, i64* %14)
  store i32 %15, i32* %11, align 4
  %16 = load i32, i32* %11, align 4
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %18, label %23

18:                                               ; preds = %4
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* @REDIS_ERR_OOM, align 4
  %21 = call i32 @__redisSetError(i32* %19, i32 %20, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %22 = load i32, i32* @REDIS_ERR, align 4
  store i32 %22, i32* %5, align 4
  br label %39

23:                                               ; preds = %4
  %24 = load i32*, i32** %6, align 8
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %11, align 4
  %27 = call i64 @__redisAppendCommand(i32* %24, i32 %25, i32 %26)
  %28 = load i64, i64* @REDIS_OK, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %34

30:                                               ; preds = %23
  %31 = load i32, i32* %10, align 4
  %32 = call i32 @sdsfree(i32 %31)
  %33 = load i32, i32* @REDIS_ERR, align 4
  store i32 %33, i32* %5, align 4
  br label %39

34:                                               ; preds = %23
  %35 = load i32, i32* %10, align 4
  %36 = call i32 @sdsfree(i32 %35)
  %37 = load i64, i64* @REDIS_OK, align 8
  %38 = trunc i64 %37 to i32
  store i32 %38, i32* %5, align 4
  br label %39

39:                                               ; preds = %34, %30, %18
  %40 = load i32, i32* %5, align 4
  ret i32 %40
}

declare dso_local i32 @redisFormatSdsCommandArgv(i32*, i32, i8**, i64*) #1

declare dso_local i32 @__redisSetError(i32*, i32, i8*) #1

declare dso_local i64 @__redisAppendCommand(i32*, i32, i32) #1

declare dso_local i32 @sdsfree(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
